--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.1.0",
   "license": "MIT",
   "dependencies": {
-    "service": "file:../service",
-    "toolbelt": "file:../toolbelt"
+    "service": "git://github.com/milespeebles/service.git",
+    "toolbelt": "git://github.com/milespeebles/toolbelt.git",
+    "tags": "git://github.com/milespeebles/tags.git"
   },
   "devDependencies": {
     "esm": "3.2.25"
